<resources>
    <string name="app_name">SeniorCare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logind"><u>Login</u></string>
    <string name="log_in_to_your_account_and_explore_senior_n_living_options_tailored_to_your_needs">Log in to your account and explore senior \n living options tailored to your needs.</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="your_email_phone"> Your Email/Phone</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_you_have_an_account">Don’t you have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="or_login_with">Or Login with</string>
    <string name="google">Google</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="please_enter_your_email_phone_number_to_nget_a_verification_code">Please enter your Email/Phone Number to \nget a verification code</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="send_code">Send Code</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="enter_the_one_time_password_otp_sent_to_n_your_email_or_phone_to_complete_verification">Enter the one-time password (OTP) sent to\n your email or phone to complete verification.</string>
    <string name="enter_otp_one_time_password">Enter OTP (One-Time-Password)</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="_00_59">00:59</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="create_a_new_password">Create a New Password</string>
    <string name="your_new_password_should_be_secure_and_neasy_to_remember_please_enter_and_n_confirm_your_new_password_below">Your new password should be secure and \neasy to remember. Please enter and \n confirm your new password below.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="submit">Submit</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="join_us_today_and_explore_senior_living_noptions_tailored_to_your_needs">Join us today and explore senior living \noptions tailored to your needs.</string>
    <string name="i_agree_to_the_terms_condition_and_privacy_policy"><![CDATA[I agree to the Terms & condition and Privacy Policy.]]></string>
    <string name="create_password">Create Password</string>
    <string name="register">Register</string>
    <string name="already_you_have_an_account">Already you have an account?</string>
    <string name="login_successfully">Login successfully</string>
    <string name="okay">Okay</string>
    <string name="compare_facility">Compare Facility</string>
    <string name="home">Home</string>
    <string name="saved_facilities">Saved Facilities</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="compare_text">Explore trusted senior living facilities tailored to your needs. Search, compare, and connect effortlessly today!</string>
    <string name="assisted_living">Assisted Living</string>
    <string name="featured_facilities"><font color="#000000">Featured</font> <font color="#EA5B60">Facilities</font></string>
    <string name="explore_facilities"><font color="#000000">Explore</font> <font color="#EA5B60">Facilities</font></string>
    <string name="feature_provider"><font color="#000000">Featured</font> <font color="#EA5B60">Providers</font></string>
    <string name="see_all"><u>See all+</u></string>
    <string name="facility_name">Facility Name</string>
    <string name="location">Location :</string>
    <string name="location_">Location</string>
    <string name="city_state_country">City, State, Country</string>
    <string name="search_for_location">Search for location</string>
    <string name="services">Services :</string>
    <string name="assisted_living_memory_care">Assisted Living, Memory Care</string>
    <string name="from">From :</string>
    <string name="_25_9">$25.9/-</string>
    <string name="featured_providers">Featured Providers</string>
    <string name="james_jackson">James Jackson</string>
    <string name="website">Website :</string>
    <string name="www_abc_com">www.abc.com</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save_changes">Save Changes</string>
    <string name="saved_featured_facilities"><font color="#000000">Saved Featured</font> <font color="#EA5B60">Facilities</font></string>
    <string name="compare_facilty"><font color="#000000">Compare</font> <font color="#EA5B60">Facility</font></string>
    <string name="change_facility">Change Facility</string>
    <string name="name_of_society">Name Of Society</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="provider_information">Provider Information</string>
    <string name="john_deo">John Deo</string>
    <string name="tom">Tom</string>
    <string name="floor">Floor</string>
    <string name="_10th_of_21_floors">10th of 21 Floors</string>
    <string name="_2nd_floors">2nd Floors</string>
    <string name="status">Status</string>
    <string name="immediately">Immediately</string>
    <string name="furnished_status">Furnished Status</string>
    <string name="semi">Semi</string>
    <string name="fully">Fully</string>
    <string name="year_built">Year Built</string>
    <string name="_2006">2006</string>
    <string name="_2010">2010</string>
    <string name="garage">Garage</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="overview">Overview</string>
    <string name="constr">Lorem ipsum dolor sit amet consectetur. Sollicitudin aliquam donec morbi risus pellentesque.donec morbi risus pellentesque.donec morbi risus pellentesque.</string>
    <string name="amenities">Amenities</string>
    <string name="lorem_ipsum_dolor_amet">Lorem,ipsum,dolor,amet.</string>
    <string name="download_broch"><font color="#000000">Download</font> <font color="#EA5B60">Brochure</font></string>
    <string name="download">Download</string>
    <string name="_under_line_fetaure_fac"><u>Featured Facilities</u></string>
    <string name="enna_smith">Enna Smith</string>
    <string name="about_us">About us</string>
    <string name="servicetxt">services</string>
    <string name="subscription_plans">Subscription Plans</string>
    <string name="contact_us">Contact Us</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="basic_plan">Basic Plan</string>
    <string name="_7_00">$7.00</string>
    <string name="month">/Month</string>
    <string name="limited_features">Limited Features</string>
    <string name="facilities">Facilities</string>
    <string name="exclusive_offers"><font color="#000000">Exclusive</font> <font color="#EA5B60">Offers</font></string>
    <string name="lorems">Lorem ipsum dolor sit amet consectetur. Orci malesuada mi et mi pellentesque tincidunt at mollis facilisis. Nisl eu blandit nunc parturient adipiscing commodo.</string>
    <string name="join_now">Join Now !</string>
    <string name="lorem_ipsum_lorem_ipsumlorem_ipsumlorem_ipsum">lorem ipsum lorem ipsumlorem ipsumlorem ipsum</string>
    <string name="facility_id">Facility ID: W1254689</string>
    <string name="floor_10th_of_21_floors"><![CDATA[Floor: 10th of 21 Floors]]></string>
    <string name="status_immediately"><![CDATA[Status: Immediately]]></string>
    <string name="furnished_status_lorem_ipsum"><![CDATA[Furnished Status: lorem ipsum]]></string>
    <string name="year_built_2016"><![CDATA[Year Built: 2016]]></string>
    <string name="garages_1"><![CDATA[Garages: 1]]></string>
    <string name="compare_now">Compare Now</string>
    <string name="agent_of_facility">Agent of Facility</string>
    <string name="contact_now">Contact Now</string>
    <string name="about_me"><font color="#000000">About</font> <font color="#EA5B60">Me</font></string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="overview_u"><u>Overview</u> </string>
    <string name="expandable_txt">Dreamscape Residences by Urban Habitat is located in Sector 25A, Noida West, sprawling across an expansive 12-acre campus. This premium project offers thoughtfully designed 2 BHK, 2 BHK + study, 3 BHK, and 3 BHK + study apartments, all ready for immediate possession. Situated at a prime junction connecting Greater Noida and Ghaziabad, Dreamscape Residences ensures seamless connectivity to key areas and highways, making it a top choice for stress-free commuting.</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="read_less"><u>Read less</u></string>
    <string name="amenities_u"><u>Amenities</u></string>
    <string name="for_any_queries_or_assistance_reach_out_to_us">For any queries or assistance, reach out to us.</string>
    <string name="email_">Email<font color='#EF4035'>*</font></string>
    <string name="name_">Name<font color='#EF4035'>*</font></string>
    <string name="phone_number">Phone Number<font color='#EF4035'>*</font></string>
    <string name="message">Message<font color='#EF4035'>*</font></string>
    <string name="call_us_on">call us on</string>
    <string name="_1_xxx_xxx_xxxx">+1 (XXX) XXX-XXXX</string>
    <string name="mail_us">Mail Us</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="_about">About US</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="deleting_your_account">Deleting your account?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="senior_living_communities"><font color="#000000">Senior</font> <font color="#EA5B60">Living Communities</font></string>
    <string name="discover_a_variety_of_senior_living_communities_that_offer_a_comfortable_and_engaging_lifestyle">Discover a variety of senior living communities that offer a comfortable and engaging lifestyle.</string>
    <string name="independent_living">Independent Living</string>
    <string name="memory_care">Memory Care</string>
    <string name="continuing_care_retirement_communities">Continuing Care Retirement Communities</string>
    <string name="find_the_perfect_community_that_matches_your_lifestyle_and_needs">Find the perfect community that matches your lifestyle and needs.</string>
    <string name="_4_8">4.8</string>
</resources>