<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        android:background="@drawable/nav_item_background" />

    <item
        android:id="@+id/compareFacilitiesFragment"
        android:icon="@drawable/compare_facilities_ic"
        android:title="@string/compare_facility"
        android:background="@drawable/nav_item_background" />

    <item
        android:id="@+id/savedFacilitiesFragment"
        android:icon="@drawable/saved_facilites_ic"
        android:title="@string/saved_facilities"
        android:background="@drawable/nav_item_background" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_ic"
        android:title="@string/profile"
        android:background="@drawable/nav_item_background" />
</menu>