<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/_5sdp"
    android:gravity="center_vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_ic_fet"
        app:strokeColor="@color/purple"
        app:strokeWidth="1dp"
        app:shapeAppearance="@style/PosterImage"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/james_jackson"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:fontFamily="@font/poppins_bold" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed"
            android:textSize="10sp"
            android:textColor="#535353"
            android:fontFamily="@font/poppins" />

        <!-- Location Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:fontFamily="@font/poppins" />

            <TextView
                android:id="@+id/locationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_state_country"
                android:textSize="10sp"
                android:textColor="#535353"
                android:fontFamily="@font/poppins"
                android:paddingStart="4dp" />
        </LinearLayout>

        <!-- Services Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/services"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:fontFamily="@font/poppins" />

            <TextView
                android:id="@+id/servicesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assisted_living_memory_care"
                android:textSize="10sp"
                android:textColor="#535353"
                android:fontFamily="@font/poppins"
                android:paddingStart="4dp" />
        </LinearLayout>

        <!-- Website Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:fontFamily="@font/poppins" />

            <TextView
                android:id="@+id/websiteTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/www_abc_com"
                android:textSize="10sp"
                android:textColor="#535353"
                android:fontFamily="@font/poppins"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"/>
        </LinearLayout>

        <!-- View Profile Button -->
        <TextView
            android:id="@+id/viewProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/view_profile"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/view_btn_ng"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:textSize="11sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/callIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/phone_ic"
        android:layout_marginStart="8dp"
        android:layout_gravity="top" />
</LinearLayout>
