<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="30dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/crossIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/cross_ic"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tickImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/bin_ic"
        android:layout_marginTop="15dp"
        style="@style/RoundedImage"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleting_your_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete"
        android:textColor="#303030"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/deleteBtn"
            android:textStyle="bold"
            android:background="@drawable/button_bg"
            android:layout_weight="1"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:textColor="@color/purple"
            android:textSize="16sp"
            android:id="@+id/cancelBtn"
            android:textStyle="bold"
            android:background="@drawable/edit_btn_bg"
            android:layout_weight="1"
            android:layout_marginStart="8dp" />

    </LinearLayout>


</LinearLayout>
